--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,13 @@ sonar.organization=sidharthjain-zemoso
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.host.url = https://sonarcloud.io
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
+sonar.sources=./src
+sonar.exclusions=**/node_modules/**,**/*.spec.ts, **/*.stories.tsx, **/src/index.tsx, **/src/App.tsx, **/src/reportWebVitals.ts, **/src/services/**
+sonar.tests=./src
+sonar.test.inclusions=**/*.spec.ts
+sonar.test.exclusions=**/*.stories.tsx
+sonar.javascript.lcov.reportPaths = ./coverage/lcov.info
