--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.host.url = https://sonarcloud.io
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=./src
-sonar.exclusions=**/node_modules/**,**/*.spec.ts, **/*.stories.tsx, **/src/index.tsx, **/src/App.tsx, **/src/reportWebVitals.ts, **/src/services/**
+sonar.exclusions=**/node_modules/**,**/*.spec.ts,  **/src/index.tsx, **/src/App.tsx, **/src/reportWebVitals.ts, **/src/services/**
 sonar.tests=./src
 sonar.test.inclusions=**/*.spec.ts
 sonar.test.exclusions=**/*.stories.tsx
