--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Test
         run: |
-          npm test --code-coverage=true --no-watch --no-progress --browsers=ChromeHeadlessCI
+          npm test -- --code-coverage=true --no-watch --no-progress --browsers=ChromeHeadlessCI
 
   sonarcloud:
     name: SonarCloud
