--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI Angular app through Github Actions
+name: Build
 on:
   push:
     branches:
@@ -6,22 +6,6 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 14.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14.x
-
-      - name: Setup
-        run: npm ci
-
-      - name: Test
-        run: |
-          npm test -- --code-coverage=true --no-watch --no-progress --browsers=ChromeHeadlessCI
-
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
