--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,4 +19,4 @@ sonar.exclusions=**/node_modules/**,**/*.spec.ts,  **/src/index.tsx, **/src/App.
 sonar.tests=./src
 sonar.test.inclusions=**/*.spec.ts
 sonar.test.exclusions=**/*.stories.tsx
-sonar.javascript.lcov.reportPaths = ./coverage/angular-unit-testing/index.html
+sonar.javascript.lcov.reportPaths = ./coverage/angular-unit-testing/report-lcov/lcov.info
