--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,9 +14,11 @@ sonar.organization=sidharthjain-zemoso
 sonar.host.url = https://sonarcloud.io
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
-sonar.sources=./src
-sonar.exclusions=**/node_modules/**,**/*.spec.ts,  **/src/index.tsx, **/src/App.tsx, **/src/reportWebVitals.ts, **/src/services/**
-sonar.tests=./src
-sonar.test.inclusions=**/*.spec.ts
-sonar.test.exclusions=**/*.stories.tsx
+
+sonar.sources=src
+sonar.tests=src
+sonar.exclusions=**/*.spec.ts,**/*test.ts,**/*.js
+sonar.test.inclusions=**/*.spec.ts,**/*test.ts
+sonar.coverage.exclusions=**/*.js,src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.ts
+
 sonar.javascript.lcov.reportPaths = ./coverage/angular-unit-testing/report-lcov/lcov.info
