--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "karma-junit-reporter": "^2.0.1",
+    "sonar-scanner": "^3.1.0",
     "typescript": "~4.6.2"
   }
 }
