--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=sidharthjain
+sonar.projectKey=angular-unit-testing2
 sonar.organization=sidharthjain-zemoso
 
 # This is the name and version displayed in the SonarCloud UI.
@@ -21,4 +21,4 @@ sonar.exclusions=**/*.spec.ts,**/*test.ts,**/*.js
 sonar.test.inclusions=**/*.spec.ts,**/*test.ts
 sonar.coverage.exclusions=**/*.js,src/main.ts,src/polyfills.ts,**/*environment*.ts,**/*module.ts
 
-sonar.typescript.lcov.reportPaths = ./coverage/angular-unit-testing/report-lcov/lcov.info
+sonar.typescript.lcov.reportPaths = ./coverage/report-lcov/lcov.info
